ci: workflow changes for publishing binary and container image

--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
-name: "pull request title validator"
-description: "Checks whether a pull request title adheres to the conventional commit standard"
+name: "pull request title validation"
+description: "Checks whether a pull request title adheres to the conventional commit specification"
 author: "Levi van Noort"
 
 runs:
