--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -4,37 +4,25 @@ on:
   pull_request:
     types:
       - opened
+      - edited
       - synchronize
-    branches:
-      - main
 
 jobs:
-  lint:
+  continuous-integration:
     runs-on: ubuntu-latest
     steps:
       - name: install go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21.3
-
-      - name: checkout code
-        uses: actions/checkout@v4
 
       - name: run linters
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.53
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: install go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.21.3
-
       - name: checkout code
         uses: actions/checkout@v4
       
-      - name: pull request title validator
+      - name: pull request title validation
         uses: ./ # kontrolplane/pull-request-title-validation@latest
