ci: add checkout step to the continuous-integration workflow

--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -11,6 +11,9 @@ jobs:
   continuous-integration:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+
       - name: install go
         uses: actions/setup-go@v4
         with:
