--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -29,3 +29,5 @@ jobs:
       
       - name: pull request title validator
         uses: ./ # kontrolplane/pull-request-title-validator@latest
+        with:
+          types: "fix,feat,chore"
