--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -30,4 +30,4 @@ jobs:
       - name: pull request title validator
         uses: ./ # kontrolplane/pull-request-title-validator@latest
         with:
-          types: "fix,feat,chore"
+          types: "fix,chore"
