--- a/.github/workflows/update-contributors.yaml
+++ b/.github/workflows/update-contributors.yaml
@@ -19,7 +19,18 @@ jobs:
           owner: kontrolplane
           repository: pull-request-title-validator
 
+      - name: check-for-changes
+        id: check
+        run: |
+          if git diff --quiet README.md; then
+            echo "No changes to commit"
+            echo "changes=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          echo "changes=true" >> $GITHUB_OUTPUT
+
       - name: open-pull-request
+        if: steps.check.outputs.changes == 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
