--- a/.github/workflows/update-contributors.yaml
+++ b/.github/workflows/update-contributors.yaml
@@ -36,6 +36,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git checkout -b update-contributors
           git add README.md
           git commit -m "chore: update contributors section"
           git push -u origin update-contributors
