--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -18,6 +18,14 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.23.1
+      
+      - name: run tests
+        run: go test -v ./...
+        
+      - name: run linting
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
 
-      - name: pull request title validator
+      - name: pull request title validator [default]
         uses: ./ # kontrolplane/pull-request-title-validator@latest
